cluster/infrastructure/monitoring/gatus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: gatus
          namespace: monitoring
          port: 8080
      middlewares:
        - name: ak-outpost-proxy-outpost
          namespace: authentik
  tls: {}
